[package]
name = "plane-cli"
version = "0.2.0"
edition = "2021"
description = "CLI for Plane project management — manage projects, work items, cycles, modules from the terminal"
license = "MIT"
repository = "https://github.com/omert11/plane-cli"

[[bin]]
name = "plane-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
mime_guess = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
comfy-table = "7.1"
futures = "0.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
